--- a/pg/registration.html
+++ b/pg/registration.html
@@ -1,61 +1,188 @@
-<!doctype html>
-<html ng-app>
-<head>
-<title>REST Academy</title>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-<script language="javascript">
-function ctrl($scope,$http) {
-    // Запрос GET к RESTful web API
-        $scope.getCompanies=function() {
-       $http.get("http://localhost:57772/csp/rest/json/humans").success(function(data) {
-             // Помещаем ответ сервера в переменную companies
-           $scope.companies=data.children;
-       }).error(function(data, status) {
-                 // Вывод информации об ошибке, если таковая возникнет
-           alert("["+status+"] Ошибка при загрузке компаний! ["+data+"]");
-       });
-   };
-  
-      // Создать новую компанию
-    $scope.create = function (company){
-       $http.post("http://localhost:57772/csp/rest/json/company",company)
-       .success(function(data){$scope.getCompanies();$scope.alertzone="Добавили компанию "+company.Name;}).error(function(data,status){
-        $scope.alertzone="["+status+"] Ошибка добавления компании :( ["+data+"]"; });
-    }
-
-    // Обновить существующую компанию
-  $scope.update = function (company){
-       $http.put("/rest/json/company/"+company.ID,company)
-        .success(function(data){$scope.alertzone="Обновили компанию "+company.Name;}).error(function(data,status){ // поменял alert(....); на alertzone
-        $scope.alertzone="["+status+"] Ошибка обновления имени компании :( ["+data+"]"; });
-    }
-            
-    // Удалить компанию
-    $scope.delete = function (company){
-        $http.delete("/rest/json/company/"+company.ID)
-        .success(function(data){$scope.getCompanies();$scope.alertzone="Удалили компанию "+company.Name;}).error(function(data,status){
-            $scope.alertzone="["+status+"] Ошибка удаления компании :( ["+data+"]"; });
-    }
-};
-</script>
-</head>
-<body ng-controller="ctrl" ng-init="getCompanies();">
-
+<!--
 <h4 ng-model="alertzone"><font color=red>{{alertzone}}</font></h4>
 
-<form name="compCreateForm" ng-model="company" ng-submit="create(company); company='';">
-    Id <input type="text" ng-model="company.Id"/>
-	Login <input type="text" ng-model="company.Login"/>
-	Password <input type="password" ng-model="company.Password"/>
+<form name="compCreateForm" style ="width:200px;" ng-model="company" ng-submit="create(company); company='';">
+    Имя<input type="text" ng-model="company.name"/>
+	Псевдоним <input type="text" ng-model="company.login"/>
+	Пароль <input type="password" ng-model="company.password"/>
+	Электронная почта <input type="text" ng-model="company.email"/>
+	Должность<input type="text" ng-model="company.jobTitle"/>
+	Место работы <input type="text" ng-model="company.workPlace"/>
     <input type="submit" value="Добавить"/>
 </form>
 <br>
-<div ng-repeat="company in companies">
-    <form name="compForm" ng-submit="update(company); compForm.$setPristine();">
-        <input type="text" ng-model="company.Name"/>
-        <input type="submit" value="Сохранить" ng-show="compForm.$dirty"/>
-        <input type="button" value="X" ng-click="delete(company);"/>
-    </form>
+--><!doctype html>
+<html ng-app>
+<head>
+<head>
+
+  <meta charset="UTF-8">
+
+  <title>Login</title>
+
+  <link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600" rel="stylesheet" type="text/css">
+
+  </style>
+
+  <script>
+    window.console = window.console || function(t) {};
+    window.open = function(){ console.log('window.open is disabled.'); };
+    window.print = function(){ console.log('window.print is disabled.'); };
+    // Support hover state for mobile.
+    if (false) {
+      window.ontouchstart = function(){};
+    }
+  </script>
+
+</head>
+<title>REST Academy</title>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+<script src="../js/registration.js" type="text/javascript"></script>
+<script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
+<script src="../js/angular.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="../css/registration.css">
+<link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600" rel="stylesheet" type="text/css">
+</head>
+<body ng-controller="ctrl" ng-init="getCompanies();">
+<h4 ng-model="alertzone"><font color=red>{{alertzone}}</font></h4>
+<div class="form">
+
+      <ul class="tab-group">
+        <li class="tab active"><a href="#signup">Регистрация</a></li>
+        <li class="tab"><a href="#login">Вход</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="signup" style="display: block;">   
+          <h1>Регистрация</h1>
+
+          <form action="#" method="post" name="compCreateForm" ng-model="company" ng-submit="create(company); company='';" accept-charset="UTF-8">
+
+          <div class="top-row">
+            <div class="field-wrap">
+              <label class="active">
+                Имя<span class="req">*</span>
+              </label>
+              <input type="text" required="" autocomplete="off" ng-model="company.name">
+            </div>
+
+            <div class="field-wrap">
+              <label class="active">
+                Фамилия<span class="req">*</span>
+              </label>
+              <input type="text" required="" autocomplete="off" ng-model="company.surname">
+            </div>
+          </div>
+		   <div class="field-wrap">
+              <label class="active">
+                Login<span class="req">*</span>
+              </label>
+              <input type="text" required="" autocomplete="off" ng-model="company.login">
+            </div>
+          </div>
+
+          <div class="field-wrap">
+            <label class="active">
+              Электронная почта<span class="req">*</span>
+            </label>
+            <input type="email" required="" autocomplete="off" ng-model="company.email">
+          </div>
+		  <div class="field-wrap">
+            <label class="active">
+              Должность<span class="req">*</span>
+            </label>
+            <input type="text" required="" autocomplete="off" ng-model="company.jobTitle">
+          </div>
+		  <div class="field-wrap">
+            <label class="active">
+              Место работы<span class="req">*</span>
+            </label>
+            <input type="text" required="" autocomplete="off" ng-model="company.workPlace">
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Пароль<span class="req">*</span>
+            </label>
+            <input type="password" required="" autocomplete="off" ng-model="company.password">
+          </div>
+
+          <input type="submit" class="button button-block" value="Добавить"/>
+
+          </form>
+
+        </div>
+
+        <div id="login" style="display: none;">   
+          <h1>Добро пожаловать</h1>
+
+          <form action="#" method="post">
+
+            <div class="field-wrap">
+            <label>
+              Электронная почта<span class="req">*</span>
+            </label>
+            <input type="email" required="" autocomplete="off">
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Пароль<span class="req">*</span>
+            </label>
+            <input type="password" required="" autocomplete="off">
+          </div>
+
+          <button class="button button-block">Войти</button>
+
+          </form>
+
+        </div>
+
+      </div><!-- tab-content -->
+
+</div> <!-- /form -->
+  <script>
+    if (document.location.search.match(/type=embed/gi)) {
+      window.parent.postMessage('resize', "*");
+    }
+  </script>
+  <script>
+    $('.form').find('input, textarea').on('keyup blur focus', function (e) {
+    var $this = $(this), label = $this.prev('label');
+    if (e.type === 'keyup') {
+        if ($this.val() === '') {
+            label.removeClass('active highlight');
+        } else {
+            label.addClass('active highlight');
+        }
+    } else if (e.type === 'blur') {
+        if ($this.val() === '') {
+            label.removeClass('active highlight');
+        } else {
+            label.removeClass('highlight');
+        }
+    } else if (e.type === 'focus') {
+        if ($this.val() === '') {
+            label.removeClass('highlight');
+        } else if ($this.val() !== '') {
+            label.addClass('highlight');
+        }
+    }
+});
+$('.tab a').on('click', function (e) {
+    e.preventDefault();
+    $(this).parent().addClass('active');
+    $(this).parent().siblings().removeClass('active');
+    target = $(this).attr('href');
+    $('.tab-content > div').not(target).hide();
+    $(target).fadeIn(600);
+});
+    //@ sourceURL=pen.js
+  </script>
+
+      
+
 </div>
 </body>
 </html>
